<resources>
    <string name="app_name">Rekomendasi Komik</string>
    <string name="mm">MM</string>
    <string name="judul">Rekomendasi Komik</string>
    <string name="loading">Now Loading</string>
    <string name="manga_dan_manhwa">Manga dan Manhwa /</string>
    <string name="lanjut">Lanjut</string>
    <string name="rekomendasi">Aplikasi ini dibuat untuk tujuan memberikan rekomendasi</string>
    <string name="membaca_komik_online">membaca komik online</string>
    <string name="welcome_to_my_aplication">Welcome to My Aplication</string>
    <string name="one_piece">One Piece</string>
    <string name="eiichiro_oda">Eiichiro Oda</string>
    <string name="clik_untuk_detail_manhwa">Klik untuk detail manhwa :</string>
    <string name="back">Back</string>
    <string name="clik_untuk_detail_manga">Klik untuk detail manga :</string>
    <string name="share">Share</string>
    <string name="rekomendasi_web_tempat_baca">Rekomendasi Web Tempat Baca</string>
    <string-array name="sinopsis_manga">
        <item>Manga One Piece yang dibuat oleh komikus bernama Oda Eiichiro ini bercerita tentang Gol D. Roger, seorang pria yang disebut sebagai "Raja Bajak Laut," akan dieksekusi oleh Pemerintah Dunia. Tapi tepat sebelum kematiannya, dia mengkonfirmasi keberadaan harta karun besar, One Piece, yang terletak di suatu tempat di lautan luas yang dikenal sebagai Grand Line. Mengumumkan bahwa One Piece dapat diklaim oleh siapa saja yang cukup layak untuk mencapainya, Raja Bajak Laut dieksekusi dan Zaman Bajak Laut Hebat dimulai. Dua puluh dua tahun kemudian, seorang pemuda bernama Monkey D.Luffy siap untuk memulai petualangannya sendiri, mencari One Piece dan berusaha untuk menjadi Raja Bajak Laut yang baru. Berbekal hanya topi jerami, perahu kecil, dan tubuh elastis, ia memulai perjalanan yang fantastis untuk mengumpulkan awaknya sendiri dan kapal yang layak yang akan membawa mereka melintasi Grand Line untuk mengklaim status terbesar di laut lepas.</item>
        <item>Manga Berserk bercerita tentang Gats, yang dikenal sebagai Black Swordsman, mencari perlindungan dari kekuatan jahat tertarik padanya dan istrinya karena tanda setan di leher mereka, dan juga dendam terhadap orang yang dicap sebagai seorang korban suci. Dibantu hanya dengan kekuatan titanic nya diperoleh dari masa kecil yang keras hidup dengan tentara bayaran, pedang raksasa, dan tangan palsu besi kiri, Gats harus berjuang melawan takdir suram nya, sambil berjuang dengan kemarahan yang mungkin kehilangan sisi kemanusiaannya.</item>
        <item>Manga Kingdom yang dibuat oleh komikus bernama HARA Yasuhisa ini bercerita tentang Jutaan tahun telah berlalu sejak zaman legenda, ketika dunia manusia dan para dewa masih sama. Pada masa-masa inilah keinginan manusia yang menggerakkan dunia. Ini adalah era perang 500 tahun: Periode negara-negara yang bertikai. Kerajaan adalah kisah tentang seorang anak muda bernama Shin yang tumbuh menjadi seorang jenderal yang hebat dan semua cobaan dan pertumpahan darah yang membawanya ke sana.</item>
        <item>Manga Jujutsu Kaisen yang dibuat oleh komikus bernama AKUTAMI Gege ini bercerita tentang Yuuji, seorang siswa di SMA Sugisawa Town # 3, kebetulan sangat berbakat di trek dan lapangan ... Tapi karena dia tidak tertarik berlarian dalam lingkaran, dia senang sebagai kerang menjadi anggota Klub Penelitian Ilmu Gaib ! Meskipun dia hanya bergabung untuk tendangan, hal-hal mulai menjadi serius ketika roh yang sebenarnya muncul di sekolah.</item>
        <item>Manga Bleach yang dibuat oleh komikus bernama KUBO Tite ini bercerita tentang Ichigo Kurosaki selalu bisa melihat hantu, tetapi kemampuan ini tidak mengubah hidupnya hampir sebanyak pertemuan dekatnya dengan Rukia Kuchiki, seorang Soul Reaper dan anggota Soul Society yang misterius. Saat melawan Hollow, roh jahat yang memangsa manusia yang menampilkan energi psikis, Rukia mencoba untuk meminjamkan Ichigo beberapa kekuatannya sehingga dia bisa menyelamatkan keluarganya; tapi yang mengejutkannya, Ichigo menyerap setiap tetes energinya. Sekarang sebagai Soul Reaper sendiri, Ichigo dengan cepat mengetahui bahwa dunia yang dia huni adalah dunia yang penuh dengan roh-roh berbahaya dan, bersama dengan Rukia--yang perlahan-lahan mendapatkan kembali kekuatannya--tugas Ichigo untuk melindungi yang tidak bersalah dari Hollow dan membantu roh sendiri menemukan kedamaian.</item>
        <item>Manga Black Clover yang dibuat oleh komikus bernama TABATA Yuuki ini bercerita tentang Asta dan Yuno ditinggalkan bersama sebagai bayi di keranjang di gereja yang sama pada hari yang sama, dan sejak itu tidak dapat dipisahkan. Sebagai anak-anak, mereka berjanji bahwa mereka akan bersaing satu sama lain untuk melihat siapa yang akan menjadi Raja Penyihir berikutnya. Namun, ketika mereka tumbuh dewasa, beberapa perbedaan di antara mereka menjadi jelas - Yuno adalah keajaiban ajaib, sementara Asta tidak bisa menggunakan sihir sama sekali. Di negara di mana sihir adalah segalanya dan kemampuan atletik tidak ada apa-apanya, Asta berusaha setiap hari untuk memprovokasi bahkan sihir paling sederhana dari dirinya dengan pelatihan fisik dan proklamasi keras wasiatnya. Pada usia 15, selama upacara kelompok di mana grimoires tiga daun semanggi dari desain yang berbeda melayang ke setiap orang, Yuno menerima buku spektakuler dengan semanggi empat daun yang legendaris, sementara Asta tidak menerima apa-apa sama sekali. Namun, kemudian, ketika Yuno terkejut dan terperangkap oleh seorang ksatria sihir yang jatuh, kebenaran tentang kekuatan dan tekad Asta terungkap — grimoire berpola gelap yang berpola gelap keluar dari menara upacara dan muncul di depannya! Buku anti-sihir "semanggi hitam" ini memiliki semanggi lima daun di sampulnya, meskipun Asta sendiri tidak melihatnya karena buku itu menyala sebentar hanya sekali ketika dia membela temannya. Sekarang kedua teman, jenius daun empat semanggi dan tidak-bakat dengan semanggi hitam tersembunyi, sedang menuju keluar di dunia, bersaing untuk tujuan yang sama.</item>
        <item>Manga Naruto yang dibuat oleh komikus bernama Kishimoto Masashi ini bercerita tentang Sebelum Naruto lahir, iblis rubah besar telah menyerang Desa Daun Tersembunyi. Hokage ke-4 dari desa daun menyegel iblis di dalam Naruto yang baru lahir, menyebabkan dia tanpa sadar tumbuh dibenci oleh sesama penduduk desa. Meskipun kekurangan bakat di banyak bidang ninjutsu, Naruto berusaha untuk hanya satu tujuan: untuk mendapatkan gelar Hokage, ninja terkuat di desanya. Menginginkan rasa hormat yang tidak pernah dia terima, Naruto bekerja menuju mimpinya dengan sesama teman Sasuke dan Sakura dan mentor Kakashi saat mereka melalui banyak cobaan dan pertempuran yang datang dengan menjadi seorang ninja.</item>
        <item>Manga Rebuild World yang dibuat oleh komikus bernama Nafuse ini bercerita tentang Peradaban masa lalu, yang sekarang disebut "Dunia Lama", telah menghasilkan banyak "Peninggalan" dengan teknologi canggihnya. Banyak puing-puing material yang tidak diketahui, gedung-gedung tinggi yang melayang di udara, obat-obatan aneh dan sekelompok senjata yang terlalu kuat untuk digunakan oleh orang-orang. Setelah runtuhnya ilmu pengetahuan dan peradaban, orang-orang mengumpulkan "Relik" ini, dan seiring waktu mereka membangun kembali masyarakat manusia. Dengan cara ini para "Pemburu" diciptakan, para pejuang yang menghadapi berbagai bahaya Dunia Lama. Akira, seorang anak pemburu baru yang ingin keluar dari daerah kumuh, memasuki reruntuhan Dunia Lama ia bertemu dengan seorang gadis misterius yang hanya bisa dilihat olehnya sebagai hantu, di dunia di mana para pemburu berusaha untuk mengatasi warisan peradaban lama.</item>
        <item>Manga Fairy Tail yang dibuat oleh komikus bernama MASHIMA Hiro ini bercerita tentang Penyihir surga, Lucy ingin bergabung dengan Fairy Tail, guild untuk penyihir paling kuat. Tetapi sebaliknya, ambisinya mendarat di genggaman sekelompok pembajak yang dipimpin oleh seorang pesulap yang licik. Satu-satunya harapannya adalah Natsu, bocah lelaki aneh yang dia temui dalam perjalanannya. Natsu bukan pahlawan khasmu - tapi dia mungkin saja harapan terbaik Lucy.</item>
        <item>Manga Fire Brigade of Flames yang dibuat oleh komikus bernama OHKUBO Atsushi ini bercerita tentang Teror telah melumpuhkan kota metropolitan Tokyo! Dirasuki oleh setan, orang-orang mulai terbakar, yang mengarah ke pembentukan departemen pemadam kebakaran khusus: Angkatan Api, siap untuk berguling pada saat itu juga untuk melawan pembakaran spontan di mana saja itu mungkin pecah. Salah satu tim Fire Force akan mendapatkan tambahan unik: Shinra, seorang anak laki-laki yang memiliki kekuatan unik untuk berlari dengan kecepatan roket, meninggalkan "jejak setan" yang terkenal dan menghancurkan sepatunya dalam prosesnya. Bisakah Pasukan Pemadam Kebakaran menemukan sumber fenomena aneh ini dan menghentikannya? Atau akankah kota itu terbakar menjadi abu terlebih dahulu?</item>
    </string-array>
</resources>