<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/black"
    tools:context=".manhwa.ManhwaActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/mm"
        android:textColor="@color/white"
        android:textSize="70sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/judul"
        android:textColor="@color/white"
        android:fontFamily="@font/novaroundregular"
        android:textSize="20sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="14dp"
        android:background="@drawable/bg2">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/clik_untuk_detail_manhwa"
                android:textColor="@color/black"
                android:layout_marginBottom="20dp"
                android:textSize="18sp"/>
            <Button
                android:id="@+id/back_to_home2"
                android:layout_width="100dp"
                android:layout_height="41dp"
                android:layout_marginStart="12dp"
                android:textColor="@color/white"
                android:background="@drawable/btnback"
                android:textAllCaps="false"
                android:text="@string/back"/>
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvManhwa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/manhwa_item" />
        </ScrollView>

    </LinearLayout>

</LinearLayout>