<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <ImageView
                android:layout_width="307dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:adjustViewBounds="true"
                android:src="@drawable/home" />
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/novaroundregular"
                android:text="@string/judul"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="30sp"
                app:layout_constraintTop_toBottomOf="@+id/imageView3"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manga_dan_manhwa"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" Webtoon"
                    android:textColor="#32CD32"
                    android:textSize="16sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:padding="12dp"
                android:background="@drawable/bg1"
                android:gravity="center_horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="18dp"
                        android:text="@string/welcome_to_my_aplication"
                        android:textColor="#0000CD"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:src="@drawable/round_done_24"/>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/rekomendasi"
                    android:fontFamily="@font/imprimaregular"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/membaca_komik_online"
                    android:fontFamily="@font/imprimaregular"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>
            </LinearLayout>

            <ImageButton
                android:id="@+id/about_rohim"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@color/black"
                android:src="@drawable/baseline_person_24" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="About Me"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/btnLanjut"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_button1"
                android:text="@string/lanjut"
                android:textAllCaps="false"
                android:textColor="@color/white" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="Click untuk memulai!"
                android:textColor="#191970"
                android:textStyle="italic"
                android:fontFamily="@font/novaroundregular"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>