<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".manhwa.DetailManhwa">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:paddingStart="15dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/mm"
            android:textColor="@color/white"
            android:textSize="70sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/judul"
            android:textColor="@color/white"
            android:fontFamily="@font/novaroundregular"
            android:textSize="20sp"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bgimg1"
        android:layout_marginTop="12dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/detail_image_manhwa"
                android:layout_width="200dp"
                android:layout_height="250dp"
                android:layout_marginTop="12dp"
                android:padding="2dp"
                android:background="@drawable/bgimg1"
                android:src="@drawable/mounthua"/>
            <TextView
                android:id="@+id/detail_title_manhwa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/judul"
                android:textSize="22dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/detail_name_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="contoh"/>
            <TextView
                android:id="@+id/sinopsis_manhwa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="Manga One Piece yang dibuat oleh komikus bernama Oda Eiichiro ini bercerita tentang Gol D. Roger, seorang pria yang disebut sebagai Raja Bajak Laut, akan dieksekusi oleh Pe"/>
            <Button
                android:id="@+id/tempat_baca_manhwa"
                android:layout_width="wrap_content"
                android:layout_height="41dp"
                android:background="@drawable/bg_button1"
                android:layout_marginTop="42dp"
                android:layout_marginStart="12dp"
                android:padding="7dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:text="@string/rekomendasi_web_tempat_baca"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="22dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/back_to_list_manhwa"
                    android:layout_width="140dp"
                    android:layout_height="41dp"
                    android:layout_marginStart="12dp"
                    android:textColor="@color/white"
                    android:background="@drawable/btnback"
                    android:textAllCaps="false"
                    android:text="@string/back"/>
                <Button
                    android:id="@+id/share_manhwa"
                    android:layout_width="140dp"
                    android:layout_height="41dp"
                    android:background="@drawable/btnshare"
                    android:layout_marginStart="12dp"
                    android:textColor="@color/white"
                    android:text="@string/share"
                    android:textAllCaps="false"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>